termino do desenvolvimento do HTML

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
         <img src="./imagem de vinicius.jpg" alt="imagem do criador da página de links, vinicius ferreira">
         <h1>Vinicius Ferreira</h1>
         <p>São Paulo, Brasil</p>
+
+        <p>"desenvolvedor front-end viciado em brawl stars."</p>
+
+        <a href="https://github.com/viniciuserreira/simples-reposit-rio">GitHub</a>
+        <a href="https://www.instagram.com/cec_cabu/">instagram</a>
+        <a href="https://youtu.be/A3dbga_XCNo?si=WkAZD-nTroahSvJb">YouTube</a>
+        <a href="https://www.tiktok.com/@cabulosotremm?_t=8klEW4HSyl3&_r=1">TikTok</a>
+        <a href="https://discord.com/channels/@me">Discord</a>
     </div>
 </body>
 </html>
