desenvolvimento do CSS terminado

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div>
         <img src="./imagem de vinicius.jpg" alt="imagem do criador da página de links, vinicius ferreira">
         <h1>Vinicius Ferreira</h1>
-        <p>São Paulo, Brasil</p>
+        <strong>São Paulo, Brasil</strong>
 
         <p>"desenvolvedor front-end viciado em brawl stars."</p>
 
