adicionado o atributo target para as âncoras. projeto finalizado

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 
         <p>"desenvolvedor front-end viciado em brawl stars."</p>
 
-        <a href="https://github.com/viniciuserreira/simples-reposit-rio">GitHub</a>
-        <a href="https://www.instagram.com/cec_cabu/">instagram</a>
-        <a href="https://youtu.be/A3dbga_XCNo?si=WkAZD-nTroahSvJb">YouTube</a>
-        <a href="https://www.tiktok.com/@cabulosotremm?_t=8klEW4HSyl3&_r=1">TikTok</a>
-        <a href="https://discord.com/channels/@me">Discord</a>
+        <a href="https://github.com/viniciuserreira/simples-reposit-rio" target="_blank">GitHub</a>
+        <a href="https://www.instagram.com/cec_cabu/" target="_blank">instagram</a>
+        <a href="https://youtu.be/A3dbga_XCNo?si=WkAZD-nTroahSvJb" target="_blank">YouTube</a>
+        <a href="https://www.tiktok.com/@cabulosotremm?_t=8klEW4HSyl3&_r=1" target="_blank">TikTok</a>
+        <a href="https://discord.com/channels/@me" target="_blank">Discord</a>
     </div>
 </body>
 </html>
